// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test fail sent tx 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-end",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰸇
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_sent_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/kusama.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#888888",
          },
        ]
      }
    >
      $10
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 55,
        },
      ]
    }
  >
    10
     
    KSM
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#EA4335",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰅖
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test pending sent tx 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-end",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰸇
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_sent_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/kusama.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#EA4335",
          },
        ]
      }
    >
      $10
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 55,
        },
      ]
    }
  >
    10
     
    KSM
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#F39B34",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test received tx withzero usdValu 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰮏
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_received_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/kusama.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#888888",
          },
        ]
      }
    >
      10 KSM
    </Text>
  </View>
  <View />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#EA4335",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰅖
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test success received tx 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰮏
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_received_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/dot.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#67D44D",
          },
        ]
      }
    >
      $10
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 55,
        },
      ]
    }
  >
    10
     
    DOT
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#67D44D",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test success received tx color 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-start",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰮏
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_received_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/dot.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#67D44D",
          },
        ]
      }
    >
      $10
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 55,
        },
      ]
    }
  >
    10
     
    DOT
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#67D44D",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test success sent tx 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#DADADA",
        "borderRadius": 10,
        "borderWidth": 1,
        "justifyContent": "center",
        "marginBottom": 5,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 5,
        "minWidth": "48%",
        "padding": 10,
      },
      Object {
        "alignSelf": "flex-end",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginBottom": 5,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "#888888",
            "fontSize": 20,
          },
          undefined,
          Object {
            "fontFamily": "Material Design Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      󰸇
    </Text>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontFamily": "Roboto-Regular",
          "fontSize": 13,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 3,
        }
      }
    >
      you_sent_title
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/dot.png",
        }
      }
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 0.8,
          "height": 40,
          "overflow": "hidden",
          "width": 40,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Roboto-Regular",
            "fontSize": 30,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "marginLeft": 8,
          },
          Object {
            "color": "#EA4335",
          },
        ]
      }
    >
      $10
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "Roboto-Regular",
          "fontSize": 15,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginLeft": 55,
        },
      ]
    }
  >
    10
     
    DOT
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "marginTop": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#888888",
            "fontFamily": "Roboto-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {
            "alignSelf": "flex-start",
            "marginLeft": 3,
          },
        ]
      }
    >
      12/02/20 00:00
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#67D44D",
              "fontSize": 20,
            },
            Object {
              "alignSelf": "flex-end",
              "marginLeft": 3,
            },
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
